Fix NPC profile dossier overlap

--- a/styles/npc-profile-panel.css
+++ b/styles/npc-profile-panel.css
@@ -65,23 +65,26 @@
 @media (min-width: 981px) {
   #npcPanel .npc-left {
     grid-column: 1 / 2;
-    grid-row: 1 / span 2;
+    grid-row: 1 / span 99;
   }
 
   #npcPanel .npc-right {
-    grid-column: 2 / 3;
-    grid-row: 1 / 2;
+    display: contents;
   }
 
+  #npcPanel .npc-right > .npc-card,
   #npcPanel .npc-panel-body > .npc-card:last-child {
     grid-column: 2 / 3 !important;
-    grid-row: 2 / 3;
   }
 }
 
 @media (max-width: 980px) {
   #npcPanel .npc-panel-body {
     grid-template-columns: 1fr;
+  }
+
+  #npcPanel .npc-right {
+    display: block;
   }
 
   #npcPanel .npc-portrait {
